Bug 62362 - Crash when using Wayland EGL platform
Summary: Crash when using Wayland EGL platform
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-15 08:56 UTC by Sergey Matyukevich
Modified: 2013-03-15 12:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Sergey Matyukevich 2013-03-15 08:56:51 UTC
Crash in Mesa when using Wayland EGL platform:

The root cause is incorrect parameter for wayland_roundtrip() in function wayland_shm_display_init_screen (see file src/gallium/state_trackers/egl/wayland/native_shm.c).

The following patch fixes the issue:

diff --git a/src/gallium/state_trackers/egl/wayland/native_shm.c b/src/gallium/state_trackers/egl/wayland/native_shm.c
index a959237..e543619 100644
--- a/src/gallium/state_trackers/egl/wayland/native_shm.c
+++ b/src/gallium/state_trackers/egl/wayland/native_shm.c
@@ -163,7 +163,8 @@ wayland_shm_display_init_screen(struct native_display *ndpy)
       return FALSE;
 
    if (shmdpy->base.formats == 0)
-      wayland_roundtrip(shmdpy->base.dpy);
+      wayland_roundtrip(&shmdpy->base);
+
    if (shmdpy->base.formats == 0)
       return FALSE;
Comment 1 Brian Paul 2013-03-15 12:53:38 UTC
The same patch was posted earlier to the Mesa list.
Fixed with commit c07c18081e3b21070c7db3aea0c7a31a31ff20ce


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.